added /generate-graph api route, removed user logged in checking at page level and added error printing to check prod error
Signed-off-by: sheldor07 <50955708+sheldor07@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.0.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
+    "langchain": "^0.0.110",
     "lucide-react": "^0.260.0",
     "next": "13.4.10",
     "postcss": "8.4.26",
